fixing spacing

--- a/css/hero.css
+++ b/css/hero.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px 15px 38px 15px;
+    padding: 30px 15px 45px 15px;
     margin-bottom: 20px;
 }
 
@@ -53,7 +53,7 @@
 
 @media screen and (min-width: 600px) {
     .hero {
-        padding: 35px 20px;
+        padding: 35px 20px 35px 20px;
         margin-bottom: 30px;
     }
 
